--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.8",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@testing-library/jest-dom": "^5.17.0",
